syntax = "proto3";

package payments;

option go_package = "/";

service PaymentsService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (PaymentResponse);
}

message ProcessPaymentRequest {
  string orderId = 1;
  string paymentMethod = 2;
}

message PaymentResponse {
  bool success = 1;
}
